# ccip-firedrill-deployment

./: .gitignore  .gitmodules  .tool-versions  CODEOWNERS  GNUmakefile  LICENSE  README.md  foundry.toml  go.mod  go.sum
.github/workflows/: test.yaml
chains/aptos/: .gitignore
chains/aptos/contracts/v1_6/: Move.toml
chains/evm/: .gitignore  remappings.txt
chains/evm/contracts/common/: HasStatus.sol  Internal.sol
chains/evm/contracts/v1_0/: FiredrillRevertMessageReceiver.sol  FiredrillToken.sol
chains/evm/contracts/v1_5/: FiredrillCompound.sol  FiredrillEntrypoint.sol  FiredrillOffRamp.sol  FiredrillOnRamp.sol
chains/evm/contracts/v1_6/: FiredrillCompound.sol  FiredrillEntrypoint.sol  FiredrillOffRamp.sol  FiredrillOnRamp.sol
chains/solana/: .gitignore  Makefile
chains/solana/contracts/: Anchor.toml  Cargo.toml
chains/solana/contracts/crate/shared/: Cargo.toml
chains/solana/contracts/crate/shared/src/: ids.rs  lib.rs  seed.rs
chains/solana/contracts/crate/shared/src/common/: entrypoint.rs  mod.rs  seed.rs
chains/solana/contracts/programs/failing_receiver/: Cargo.toml
chains/solana/contracts/programs/failing_receiver/src/: lib.rs
chains/solana/contracts/programs/firedrill_entrypoint/: Cargo.toml
chains/solana/contracts/programs/firedrill_entrypoint/src/: lib.rs
chains/solana/contracts/programs/firedrill_feequoter/: Cargo.toml
chains/solana/contracts/programs/firedrill_feequoter/src/: lib.rs  state.rs
chains/solana/gobindings/failing_receiver/: CcipReceive.go  CcipReceive_test.go  types.go  (+3 more)
chains/solana/scripts/: anchor-go-gen.sh  estimate-rent.sh  reclaim-sol.sh  rematch-ids.sh
contracts/v1_0/: FiredrillRevertMessageReceiver.sol
contracts/v1_5/: FiredrillCompound.sol  FiredrillEntrypoint.sol  FiredrillOffRamp.sol
contracts/v1_6/: FiredrillCompound.sol  FiredrillEntrypoint.sol  FiredrillOffRamp.sol
deployment/: deploy_contracts.go  deploy_contracts_test.go  view.go  view_test.go
deployment/evm/: deploy_contracts.go  deploy_contracts_test.go  exec_drill.go  view.go
deployment/shared/: shared.go
deployment/solana/: deploy_contracts.go  exec_drill.go  pda.go  view.go
pkg/: alerts.go
(+90 files in other folders)
