[package]
name = "shared"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["lib"]
name = "shared"

[features]
default = []


[dependencies]
solana-program = "1.17.25" # pin solana to 1.17
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"

