[package]
name = "firedrill_entrypoint"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "firedrill_entrypoint"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []


[dependencies]
solana-program = "1.17.25" # pin solana to 1.17
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
shared = { path = "../../crate/shared" }
firedrill_onramp = { path = "../firedrill_onramp", features = ["cpi"] }
firedrill_offramp = { path = "../firedrill_offramp", features = ["cpi"] }
firedrill_compound = { path = "../firedrill_compound", features = ["cpi"] }

